<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"  >

    <item
        android:id="@+id/all"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/all">
    </item>

    <item
        android:id="@+id/outpay"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/outpay">
    </item>

    <item
        android:id="@+id/succeed"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/succeed">
    </item>
    <item
        android:id="@+id/fail"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/fail">
    </item>
    <item
        android:id="@+id/processing"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/processing">
    </item>

</menu>